--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card {
+  width: 25%
+}
+
+.card .card-footer button {
+  cursor: pointer;
+  float: right;
+  vertical-align: middle;
+  height: 28px;
+  width: 65px;
+  text-align: center;
+  font-size: 13px;
+  padding: 6px;
+}
