--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,6 +14,10 @@ code {
     monospace;
 }
 
+h1, h2, h3, h4, span{
+  color: white;
+}
+
 .card .card-footer button {
   cursor: pointer;
   float: right;
@@ -25,10 +29,6 @@ code {
   padding: 6px;
 }
 
-
-#basic-nav-dropdown{
-  color: white;
-}
 
 .navbar{
   margin-bottom: 15px;
@@ -42,6 +42,14 @@ code {
   margin: auto;
 }
 
+.navbar a:hover{
+  color: rgb(150, 112, 8);
+}
+
 .navbar-brand {
   color: orange;
+}
+
+.navbar .navbar-collapse .navbar-nav .dropdown-menu .dropdown-item img{
+  
 }
