--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  background-color: #282c34;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -20,10 +21,6 @@ h2, h4, span {
 
 h3 {
   color: black;
-}
-
-.navbar{
-  margin-bottom: 15px;
 }
 
 .navbar h1 {
@@ -93,22 +90,62 @@ h3 {
 .navbar .navbar-collapse .navbar-nav .dropdown-menu .dropdown-item img{
   
 }
+
 .gameCart{
-  background-color: #292A30 !important;
+  position: sticky;
+  top: 50px;
 }
 
 .gameCart img{
-  width: 50%;
+  padding-top: 10px;
+  width: 100%;
+}
+
+.gameCart .title{
+  font-size: 40px;
+}
+
+h5{
+  color: white;
+  text-transform: capitalize;
+}
+
+.officialsite{
+  margin-bottom: 25px;
+}
+
+.line{
+  background-color: #aaaaaa;
+  height: 1px;
+  width: 100%;
+  padding: 1px;
+  margin-bottom: 15px;
 }
 
 .title{
   padding: 20px;
+  color: white;
+}
+
+.information .title{
+  font-size: 60px;
+}
+
+.genre{
+  width: 300px;
+  height: 100px;
+  margin: 20px;
+  border-left: 2px solid rgba(255, 255, 255, 0.1);
 }
 
 .vid{
-  position: fixed;
+  z-index: 3;
   width: 600px;
   height: 340px;
-  bottom: 0;
-  right: 0;
+}
+
+.description{
+  padding: 35px;
+  font-size: 25px;
+  color: white;
 }
