--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -76,7 +76,7 @@ h3 {
 
 .card img{
   box-shadow: inset 0 0 10px black;
-  height: 250px;
+  max-height: 250px;
   border-radius: 3px;
   opacity: 1;
 }
@@ -90,8 +90,12 @@ h3 {
   color: white;
 }
 
+.navbar .navbar-collapse .navbar-nav .dropdown-menu {
+  min-width: 20rem;
+}
+
 .navbar .navbar-collapse .navbar-nav .dropdown-menu .dropdown-item img{
-  
+  height: 50px;
 }
 .gameCart{
   background-color: #292A30 !important;
