--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -141,9 +141,10 @@ h3 {
   top: 50px;
 }
 
-.gameCart img{
+.gameCart .cover {
   padding-top: 10px;
   width: 100%;
+  border-radius: 2%;
 }
 
 .gameCart .title{
@@ -177,8 +178,8 @@ h3 {
 
 .vid{
   z-index: 3;
-  width: 600px;
-  height: 340px;
+  width: 100%;
+  height: 482px;
 }
 
 .description{
@@ -217,3 +218,8 @@ p{
   color: white;
 }
 
+.icon{
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+}
