--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -89,11 +89,15 @@ h3 {
   font-size: 15px;
 }
 
-.card img{
+.card .cardImg{
   box-shadow: inset 0 0 10px black;
   min-height: 180px;
   border-radius: 3px;
   opacity: 1;
+}
+.card .icon{
+  height: 20px;
+  width: 20px;
 }
 
 .card img:hover{
@@ -136,6 +140,14 @@ h3 {
   margin-left: 0.5em;
 }
 
+.backgroundIMG{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  filter: blur(5px);
+}
+
 .gameCart{
   position: sticky;
   top: 50px;
@@ -170,7 +182,7 @@ h3 {
 }
 
 .genre{
-  width: 300px;
+  width: 100%;
   height: 100px;
   margin: 20px;
   border-left: 2px solid rgba(255, 255, 255, 0.1);
@@ -179,12 +191,14 @@ h3 {
 .vid{
   z-index: 3;
   width: 100%;
-  height: 482px;
+  height: 524px;
+  padding: 50px;
 }
 
 .description{
-  padding: 35px;
-  font-size: 25px;
+  padding: 45px;
+  font-size: 20px;
+  line-height: 25px;
   color: white;
 }
 
@@ -222,4 +236,8 @@ p{
   height: 45px;
   width: 45px;
   border-radius: 50%;
+}
+
+.space{
+  padding-left: 30px;
 }
