--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,8 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-h2, h4, span {
+h2 {
+  color: black;
+}
+h4, span {
   color: white;
 }
 
@@ -92,8 +94,10 @@ h3 {
 
 .card .cardImg{
   box-shadow: inset 0 0 10px black;
-  min-height: 180px;
+  min-height: 11rem;
+  max-height: 11rem;
   border-radius: 3px;
+  object-fit: cover;
   opacity: 1;
 }
 .card .icon{
@@ -136,6 +140,11 @@ h3 {
   width: 100%;
   object-fit: cover;
   border-radius: 15%;
+}
+
+.filter {
+  top: 50px;
+  position: sticky;
 }
 
 .filter .form-check {
@@ -216,6 +225,10 @@ h3 {
 
 .cart-page strong, .cart-page span {
   font-size: 20px;
+  color: white;
+}
+
+.cart-page h2 {
   color: white;
 }
 
